--- a/microservices/spring-cloud-config-server/src/main/resources/application.properties
+++ b/microservices/spring-cloud-config-server/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=spring-cloud-config-server
 server.port=8888
+spring.cloud.config.server.git.uri=file://C:/workspaces/udemy/in28minutes/git-localconfig-repo
