--- a/microservices/limits-service/src/main/resources/application.properties
+++ b/microservices/limits-service/src/main/resources/application.properties
@@ -1,2 +1,4 @@
+spring.application.name=limits-service
+spring.config.import=optional:configserver:http://localhost:8888
 limits-service.minimum=3
 limits-service.maximum=997
