--- a/microservices/limits-service/src/main/resources/application.properties
+++ b/microservices/limits-service/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 spring.application.name=limits-service
 spring.config.import=optional:configserver:http://localhost:8888
+
+spring.profiles.active=qa
+
+#spring.cloud.config.name= to define name to be fetched
+
 limits-service.minimum=3
 limits-service.maximum=997
