--- a/microservices/currency-exchange-service/src/main/resources/application.properties
+++ b/microservices/currency-exchange-service/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=currency-exchange
 server.port=8000
 
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.h2.console.enabled=true
+
 spring.cloud.config.enabled=false 
 #spring.cloud.config.import-check.enabled=false.
 #spring.config.import=configserver
