--- a/microservices/currency-conversion-service/src/main/resources/application.properties
+++ b/microservices/currency-conversion-service/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=currency-conversion
 server.port=8100
 
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
 spring.cloud.config.enabled=false
