--- a/microservices/currency-exchange-service/src/main/resources/application.properties
+++ b/microservices/currency-exchange-service/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
 
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
 spring.cloud.config.enabled=false 
 #spring.cloud.config.import-check.enabled=false.
 #spring.config.import=configserver
