--- a/microservices/api-gateway/src/main/resources/application.properties
+++ b/microservices/api-gateway/src/main/resources/application.properties
@@ -3,5 +3,7 @@ server.port=8765
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
-spring.cloud.config.enabled=false
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
+spring.cloud.config.enabled=false
