--- a/microservices/currency-exchange-service/src/main/resources/application.properties
+++ b/microservices/currency-exchange-service/src/main/resources/application.properties
@@ -7,6 +7,11 @@ spring.h2.console.enabled=true
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
+resilience4j.retry.instances.sample-api.maxAttempts=5
+resilience4j.retry.instances.sample-api.wait-duration=5s
+resilience4j.retry.instances.sample-api.enable-exponential-backoff=true
+#resilience4j.retry.instances.sample-api.maxRetryAttempts=5 #OLD
+
 spring.cloud.config.enabled=false 
 #spring.cloud.config.import-check.enabled=false.
 #spring.config.import=configserver
