--- a/microservices/currency-exchange-service/src/main/resources/application.properties
+++ b/microservices/currency-exchange-service/src/main/resources/application.properties
@@ -10,7 +10,12 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 resilience4j.retry.instances.sample-api.maxAttempts=5
 resilience4j.retry.instances.sample-api.wait-duration=5s
 resilience4j.retry.instances.sample-api.enable-exponential-backoff=true
-#resilience4j.retry.instances.sample-api.maxRetryAttempts=5 #OLD
+
+resilience4j.ratelimiter.instances.default.limitForPeriod=2
+resilience4j.ratelimiter.instances.default.limitRefreshPeriod=10s
+
+resilience4j.bulkhead.instances.default.maxConcurrentCalls=10
+resilience4j.bulkhead.instances.sample-api.maxConcurrentCalls=10
 
 spring.cloud.config.enabled=false 
 #spring.cloud.config.import-check.enabled=false.
