--- a/microservices/currency-exchange-service/src/main/resources/application.properties
+++ b/microservices/currency-exchange-service/src/main/resources/application.properties
@@ -17,6 +17,9 @@ resilience4j.ratelimiter.instances.default.limitRefreshPeriod=10s
 resilience4j.bulkhead.instances.default.maxConcurrentCalls=10
 resilience4j.bulkhead.instances.sample-api.maxConcurrentCalls=10
 
+#to 100% -> 1.0 let`s say to 5% -> 0.05
+spring.sleuth.sampler.probability=1.0
+
 spring.cloud.config.enabled=false 
 #spring.cloud.config.import-check.enabled=false.
 #spring.config.import=configserver
