--- a/microservices/api-gateway/src/main/resources/application.properties
+++ b/microservices/api-gateway/src/main/resources/application.properties
@@ -7,3 +7,5 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 #spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 spring.cloud.config.enabled=false
+
+spring.sleuth.sampler.probability=1.0
