--- a/microservices/currency-conversion-service/src/main/resources/application.properties
+++ b/microservices/currency-conversion-service/src/main/resources/application.properties
@@ -4,3 +4,5 @@ server.port=8100
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 spring.cloud.config.enabled=false
+
+spring.sleuth.sampler.probability=1.0
