--- a/microservices/currency-exchange-service/src/main/resources/application.properties
+++ b/microservices/currency-exchange-service/src/main/resources/application.properties
@@ -20,6 +20,8 @@ resilience4j.bulkhead.instances.sample-api.maxConcurrentCalls=10
 #to 100% -> 1.0 let`s say to 5% -> 0.05
 spring.sleuth.sampler.probability=1.0
 
+##spring.zipkin.base-url=http://localhost:9411/
+
 spring.cloud.config.enabled=false 
 #spring.cloud.config.import-check.enabled=false.
 #spring.config.import=configserver
